# SecureEye

./: .clang-tidy  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.yml  meson.build  meson.options  pyproject.toml  requirements-vendor.txt  requirements.txt
.github/: Dependabot.yml
.github/workflows/: CodeQL.yml  check.yml  lint.yml  pytests.yml  release-debs.yml
docker/: entrypoint-pam-sudo-smoke.sh  entrypoint-pytest.sh
docs/: auth-architecture.md  auth-protocol-v1.md  pam-behavior-matrix.md
secureEye/: SecureEye.1
secureEye/debian/: changelog  control  install  libpam-secureeye.install  not-installed  postinst  preinst  prerm  rules  secureEye.pam-config  secureeye-authd.install  secureeye-authd.sysusers
secureEye/src/: cli.py  compare.py  config.ini  i18n.py  meson.build  paths.py.in  paths_factory.py  snapshot.py
secureEye/src/auth/: __init__.py  detector_factory.py  errors.py  frame_ops.py  matching.py  model_store.py  session.py  types.py  ui_bridge.py
secureEye/src/authd/: main.py  protocol.py  server.py
secureEye/src/autocomplete/: secureEye.in
secureEye/src/cli/: add.py  clear.py  config.py  disable.py  list.py  remove.py  set.py  snap.py  test.py
secureEye/src/detectors/: __init__.py  base.py  dlib_detector.py  mediapipe_detector.py  utils.py
secureEye/src/pam/: README.md  main.cc  main.hh  meson.build  optional_task.hh  paths.hh.in
secureEye/src/pam-config/: howdy.in
secureEye/src/recorders/: ffmpeg_reader.py  pyv4l2_reader.py  v4l2.py  video_capture.py
secureEye/src/rubberstamps/: __init__.py  hotkey.py  nod.py
secureEye/src/systemd/: secureeye-authd.service.in
tests/cli/: test_cli_tools.py
tests/detectors/: test_mediapipe_detector.py  test_mediapipe_integration.py
